seperate overlays for things that need to be cleared

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 	<div class="container">
 	  <div class="videowrapper">
-		<canvas id="overlay"></canvas>
+		<canvas class="overlay" id="overlay-gui"></canvas>
+		<canvas class="overlay" id="overlay-detector"></canvas>
 		<video autoplay id="video"></video>
 	  </div>
 
